--- a/index.html
+++ b/index.html
@@ -11,6 +11,74 @@
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM1te0w1dBw4kFWQu9zK5vAY5Wm8y1VslN9Rj" crossorigin="anonymous">
     <style>
+/* Featured Products Section */
+.featured-products {
+    text-align: center;
+    padding: 60px 20px;
+    background-color: #f4f4f4; /* Light background to contrast with the sections */
+}
+
+.featured-products h2 {
+    font-size: 32px;
+    color: #0e2841; /* Same blue color as headings */
+    margin-bottom: 30px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.products-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap; /* Responsive layout */
+}
+
+.product {
+    text-align: center;
+    max-width: 250px;
+    background: #ffffff;
+    border-radius: 50%;
+    padding: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.product img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 15px;
+    transition: transform 0.3s ease;
+}
+
+.product h3 {
+    font-size: 18px;
+    color: #333;
+    margin-bottom: 5px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.product p {
+    font-size: 16px;
+    color: #2a9d8f; /* Green for price */
+}
+
+.product:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.product img:hover {
+    transform: scale(1.1);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .products-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
 /* Footer General Styles */
 .site-footer {
     background-color: #e8f4fa; /* Light blue background */
@@ -440,7 +508,30 @@
     <input type="text" placeholder="Search for products or services...">
     <button>Search</button>
 </div>
-
+<!-- Featured Products Section -->
+<section class="featured-products">
+    <h2>Featured Products</h2>
+    <div class="products-container">
+        <!-- Product 1 -->
+        <div class="product">
+            <img src="images/Collagen.jpg" alt="Collagen">
+            <h3>Collagen Booster</h3>
+            <p>$30</p>
+        </div>
+        <!-- Product 2 -->
+        <div class="product">
+            <img src="images/Sulfate.jpg" alt="Sulfate">
+            <h3>Chondroitin Sulfate</h3>
+            <p>$40</p>
+        </div>
+        <!-- Product 3 -->
+        <div class="product">
+            <img src="images/Q10.jpg" alt="Q10">
+            <h3>Coenzyme Q10</h3>
+            <p>$35</p>
+        </div>
+    </div>
+</section>
 <!-- Content Sections -->
 <div id="about-us" class="section">
     <div class="section-icon">
