--- a/index.html
+++ b/index.html
@@ -514,19 +514,19 @@
     <div class="products-container">
         <!-- Product 1 -->
         <div class="product">
-            <img src="images/Collagen.jpg" alt="Collagen">
+            <img src="images/Colllagen.webp" alt="Colllagen">
             <h3>Collagen Booster</h3>
             <p>$30</p>
         </div>
         <!-- Product 2 -->
         <div class="product">
-            <img src="images/Sulfate.jpg" alt="Sulfate">
+            <img src="images/Sulfate.webp" alt="Sulfate">
             <h3>Chondroitin Sulfate</h3>
             <p>$40</p>
         </div>
         <!-- Product 3 -->
         <div class="product">
-            <img src="images/Q10.jpg" alt="Q10">
+            <img src="images/Q10.webp" alt="Q10">
             <h3>Coenzyme Q10</h3>
             <p>$35</p>
         </div>
