--- a/index.html
+++ b/index.html
@@ -60,13 +60,8 @@
 .product h3 {
     font-size: 16px;
     color: #333;
-    margin-bottom: 5px;
+    margin-bottom: 0; /* Removed margin related to price */
     font-family: 'Roboto', sans-serif;
-}
-
-.product p {
-    font-size: 14px;
-    color: #2a9d8f;
 }
 
 /* Hover Effects */
@@ -566,55 +561,71 @@
         <div class="product">
             <img src="images/Collagen.jpg" alt="Collagen">
             <h3>Collagen Booster</h3>
-            <p>$30</p>
         </div>
         <!-- Product 2 -->
         <div class="product">
             <img src="images/Sulfate.jpg" alt="Sulfate">
             <h3>Chondroitin Sulfate</h3>
-            <p>$40</p>
         </div>
         <!-- Product 3 -->
         <div class="product">
             <img src="images/Q10.jpg" alt="Q10">
             <h3>Coenzyme Q10</h3>
-            <p>$35</p>
         </div>
         <!-- Product 4 -->
         <div class="product">
             <img src="images/VitaminB1.jpg" alt="Vitamin B1">
             <h3>Vitamin B1 (Thiamine HCL/Mono)</h3>
-            <p>$15</p>
         </div>
         <!-- Product 5 -->
         <div class="product">
             <img src="images/VitaminB5.jpg" alt="Vitamin B5">
             <h3>Vitamin B5 (Calcium Pantothenate)</h3>
-            <p>$20</p>
         </div>
         <!-- Product 6 -->
         <div class="product">
             <img src="images/VitaminB6.jpg" alt="Vitamin B6">
             <h3>Vitamin B6 (Pyridoxine)</h3>
-            <p>$18</p>
         </div>
         <!-- Product 7 -->
         <div class="product">
             <img src="images/GreenTeaExtract.jpg" alt="Green Tea Extract">
             <h3>Green Tea Extract</h3>
-            <p>$25</p>
         </div>
         <!-- Product 8 -->
         <div class="product">
             <img src="images/Taurine.jpg" alt="Taurine">
             <h3>Taurine</h3>
-            <p>$22</p>
         </div>
         <!-- Product 9 -->
         <div class="product">
             <img src="images/LCarnitine.jpg" alt="L-Carnitine">
             <h3>L-Carnitine Variants</h3>
-            <p>$28</p>
+        </div>
+        <!-- Product 10 -->
+        <div class="product">
+            <img src="images/Aspartame.jpg" alt="Aspartame">
+            <h3>Aspartame</h3>
+        </div>
+        <!-- Product 11 -->
+        <div class="product">
+            <img src="images/AcesulfameK.jpg" alt="Acesulfame K">
+            <h3>Acesulfame K</h3>
+        </div>
+        <!-- Product 12 -->
+        <div class="product">
+            <img src="images/Sucralose.jpg" alt="Sucralose">
+            <h3>Sucralose</h3>
+        </div>
+        <!-- Product 13 -->
+        <div class="product">
+            <img src="images/SodiumErythorbate.jpg" alt="Sodium Erythorbate">
+            <h3>Sodium Erythorbate</h3>
+        </div>
+        <!-- Product 14 -->
+        <div class="product">
+            <img src="images/Resveratrol.jpg" alt="Resveratrol">
+            <h3>Resveratrol (50%, 70%, 98%)</h3>
         </div>
     </div>
 
